--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
     <link rel="manifest" href="static/site.webmanifest">
-    <link rel="mask-icon" href="static/safari-pinned-tab.svg" color="#489fb3">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2d89ef">
     <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="theme-color" content="#92aaff">
+    <meta name="theme-color" content="#232833">
     
     <title>AlexisAguirre {Geologist & Web Developer}</title>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
